better zoom on click

--- a/views/publish.pug
+++ b/views/publish.pug
@@ -171,7 +171,6 @@ block content
 		var clicked;
 		map.on('click', function(e){
 			clicked = e.latlng;
-			
 		})
 		
 		$(document).on('click', '.leaflet-interactive', function(e){
@@ -191,7 +190,7 @@ block content
 			var dx = parseInt(dxm.replace('M', ''), 10);
 			var dy = parseInt(d.split(',')[1], 10);
 			var rangex = [dx-8, dx-7, dx-6, dx-5, dx-4, dx-2, dx-1, dx, dx+1, dx+2, dx+3, dx+4, dx+5, dx+6, dx+7, dx+8];
-			var rangey = [dy-8, dy-7, dy-6, dy-5, dy-4, dy-2, dy-1, dy, dy+1, dy+2, dy+3, dy+4, dy+5, dy+5, dy+5, dy+5];
+			var rangey = [dy-8, dy-7, dy-6, dy-5, dy-4, dy-2, dy-1, dy, dy+1, dy+2, dy+3, dy+4, dy+5, dy+6, dy+7, dy+8];
 
 			var grid = [[]];
 			for (var x = 0; x < rangex.length; x++) {
@@ -204,6 +203,8 @@ block content
 			var that = $(document).find($("path[d^='"+d+"']"))
 			console.log(d, that)
 			var list = 0;
+			var bounds = [];
+			$('.list > .ms-Grid > .ms-Panel-contentInner').html('')
 			for (var i in grid) {
 				for (var j in grid[i]) {
 					var indexes = []
@@ -218,7 +219,7 @@ block content
 								contentType: false,
 								type: 'POST',
 								success: function(data){
-									$('.list > .ms-Grid > .ms-Panel-contentInner').append('<a href="/focus/'+data._id+'/'+zoom+'/'+data.geometry.coordinates[1]+'/'+data.geometry.coordinates[0]+'" class="ms-Grid-col ms-u-sm12"><span class="ms-font-l">'+data.properties.label+'</span></a>')
+									$('.list > .ms-Grid > .ms-Panel-contentInner').append('<a href="/focus/'+data._id+'/14/'+data.geometry.coordinates[1]+'/'+data.geometry.coordinates[0]+'" class="ms-Grid-col ms-u-sm12"><span class="ms-font-l">'+data.properties.label+'</span></a>')
 									map.setView([data.geometry.coordinates[1], data.geometry.coordinates[0]])
 									lMarker.remove()
 								}
@@ -231,6 +232,7 @@ block content
 
 				}												
 			}
+			
 			if (list > 1) {
 				console.log(list)
 				$('.list').css({display: 'block'})
@@ -238,6 +240,10 @@ block content
 				$('.list').addClass("is-open");
 				$('.listheader').remove()
 				$('.list > .ms-Grid > .ms-Panel-contentInner').prepend('<p class="ms-font-s listheader ms-fontWeight-semibold">'+list+' features nearby:</p>');
+				var center = map.getCenter();
+				var lat = center.lat;
+				var lng = center.lng;
+				map.setView([lat, lng])
 				map.dragging.disable();
 				map.touchZoom.disable();
 				map.doubleClickZoom.disable();
@@ -247,23 +253,22 @@ block content
 				if (map.tap) map.tap.disable();
 				document.getElementById('map').style.cursor='default';
 				$('.list > .js-togglePanel').css('pointer-events', 'auto')
-
+				console.log(bounds)
 			} else {
 				if (list === 0) {
+					map.setView([#{lat}, #{lng}])
 					//clicked = {lat: #{lat}, lng: #{lng}}
 				} else {
 					var id = $(e.originalEvent.explicitOriginalTarget).attr('class').split(' ')[0];
-					lat = latlng.lat;
-					lng = latlng.lng;
+					var center = map.getCenter();
+					lat = center.lat;
+					lng = center.lng;
 					console.log(id)
-
-					$.post('/focus/'+id+'/'+zoom+'/'+lat+'/'+lng+'').done(function(result){
+					$.post('/focus/'+id+'/14/'+lat+'/'+lng+'').done(function(result){
 						var lat = result.geometry.coordinates[1];
 						var lng = result.geometry.coordinates[0];
-						window.location.href = '/focus/'+id+'/'+zoom+'/'+lat+'/'+lng+''
 						
-
-						//
+						window.location.href = '/focus/'+id+'/14/'+lat+'/'+lng+''
 					})
 				}
 			}
