--- a/views/gallery.pug
+++ b/views/gallery.pug
@@ -800,7 +800,8 @@ if (infowindow === 'doc')
 							a(href="http://"+doc.properties.website+"", target="_blank")
 								i.ms-Icon.ms-Icon--link
 						div#append(class= append)
-							img(src= doc.properties.image)
+							if (doc.properties.image !== "")
+								img#if_missing(src= doc.properties.image)
 					div.ms-Grid-col.ms-u-sm12
 						p.ms-font-s.ms-fontWeight-semibold #{doc.properties.city} 
 							br
