--- a/views/publish.pug
+++ b/views/publish.pug
@@ -42,8 +42,17 @@ block content
 	if (infowindow && infowindow !== 'new' && infowindow !== 'edit')
 		div.ms-Overlay.ms-Overlay--dark.js-togglePanel
 		
-	script(type="text/javascript").		
-
+	script(type="text/javascript").
+		
+		$.get('/listing/'+#{id}+'/'+#{zoom}+'/'+#{lat}+'/'+#{lng}+'').done(function(doc){
+			if (doc !== null) {
+				$('img#if_missing').attr('src', ''+doc.properties.image+'').on('error', function() {
+					$('img#if_missing').attr( 'src', '' );
+				})
+			}
+			
+		})
+		
 		$('#input-su_b, #input-su_e, #input-mo_b, #input-mo_e, #input-tu_b, #input-tu_e, #input-we_b, #input-we_e, #input-th_b, #input-th_e, #input-fr_b, #input-fr_e, #input-sa_b, #input-sa_e').pickatime({
 			format: 'h:i A',
 			formatSubmit: 'h:i A',
