--- a/views/layout.pug
+++ b/views/layout.pug
@@ -28,6 +28,6 @@ html
 		block header
 			include menu.pug
 		block content
-		a#publish_logo(href="/home" target="_blank")
+		a#publish_logo(href="https://github.com/tbushman/emergencyservices" target="_blank")
 			img(src="/images/publish_logo.svg")
 			
