--- a/views/menu.pug
+++ b/views/menu.pug
@@ -3,7 +3,7 @@ if (menu === 'profile' || menu === 'home')
 		li
 			input#mySearch.catchphrase(type="search", placeholder="search")
 			a(href="#", title="Menu")
-				img(src="http://pu.bli.sh/images/menu_button.svg")
+				img(src="https://pu.bli.sh/images/menu_button.svg")
 
 			div#dropdown
 				a.drop.ms-Grid-col.ms-u-sm12#contact(href="/") 
