--- a/views/import.pug
+++ b/views/import.pug
@@ -176,6 +176,18 @@ block content
 					return keylist;
 					
 				}
+								if (level2Key = 'coordinates') {
+									$('.levelSchema#'+level1Key+'').append('<li>'+level2Key+' lat</li>');
+									$('.levelSchema#'+level1Key+'').append('<li>'+level2Key+' lng</li>');
+									$('.compare').append('<li><a href="#keylist" id="compare">Select lat field</a></li>')
+									$('.compare').append('<li><a href="#keylist" id="compare">Select lat field</a></li>');
+									$('form').append('<input id="lat" name="lat"></input>')
+									$('form').append('<input id="lng" name="lng"></input>')
+
+								} else {
+									$('form').append('<input id="'+level2Key+'" name="'+level2Key+'"></input>')
+								}
+							$('form').append('<input id="'+level1Key+'" name="'+level1Key+'"></input>')
 				$(document).on('click', '.key', function(){
 					//$('.appended').remove();
 					$(this).css('color', '#000');
